--- a/admin.html
+++ b/admin.html
@@ -1,192 +1,188 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <title>Admin – BDStreamHub</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <style>
     body {
-      background: #121212;
-      color: #eee;
+      margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      padding: 20px;
-      max-width: 900px;
-      margin: auto;
+      background: #1f1f1f;
+      color: #eee;
     }
-    h1 {
-      color: #f8b500;
+    header {
+      background: #111;
+      padding: 15px 20px;
       text-align: center;
-      margin-bottom: 30px;
-      letter-spacing: 2px;
+      font-size: 24px;
+      font-weight: bold;
+      color: #08f;
     }
-    #loginSection, #adminSection {
+    #login-section, #admin-section {
+      max-width: 500px;
+      margin: 40px auto;
       background: #222;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 15px #f8b500aa;
-      margin-bottom: 30px;
+      box-shadow: 0 0 15px #000a;
     }
-    #loginSection input[type="password"] {
+    #login-section input {
       width: 100%;
       padding: 12px;
-      border-radius: 6px;
-      border: none;
-      font-size: 1.1rem;
       margin-bottom: 12px;
-    }
-    #loginSection button {
-      width: 100%;
-      background: #f8b500;
       border: none;
-      padding: 12px;
-      font-size: 1.2rem;
-      font-weight: 700;
-      color: #121212;
-      cursor: pointer;
       border-radius: 6px;
-      transition: background-color 0.3s ease;
+      font-size: 16px;
     }
-    #loginSection button:hover {
-      background-color: #c69000;
+    #login-section button {
+      width: 100%;
+      padding: 12px;
+      background: #08f;
+      border: none;
+      border-radius: 6px;
+      color: #111;
+      font-size: 18px;
+      font-weight: bold;
+      cursor: pointer;
     }
+    #login-msg { color: #f55; text-align: center; margin-top: 10px; }
+
     form input, form textarea {
       width: 100%;
-      margin: 6px 0;
-      padding: 10px 12px;
+      margin: 8px 0;
+      padding: 10px;
       border-radius: 6px;
       border: 1px solid #444;
-      background: #121212;
+      background: #1a1a1a;
       color: #eee;
-      font-size: 1rem;
+      font-size: 14px;
     }
-    form textarea {
-      resize: vertical;
-      min-height: 60px;
+    form label {
+      font-size: 14px;
+      margin-top: 8px;
+      display: block;
     }
     form button {
-      padding: 12px 15px;
-      background: #f8b500;
-      color: #121212;
+      width: 100%;
+      padding: 12px;
+      background: #08f;
       border: none;
       border-radius: 6px;
+      color: #111;
+      font-size: 16px;
+      font-weight: bold;
+      margin-top: 12px;
       cursor: pointer;
-      font-weight: 700;
-      font-size: 1.1rem;
-      margin-top: 10px;
-      width: 100%;
-      transition: background-color 0.3s ease;
     }
-    form button:hover {
-      background: #c69000;
-    }
+
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 30px;
-      box-shadow: 0 0 15px #f8b500aa;
-      border-radius: 10px;
+      background: #222;
+      border-radius: 8px;
       overflow: hidden;
-    }
-    table thead {
-      background: #333;
-      color: #f8b500;
     }
     table th, table td {
       padding: 10px;
       border-bottom: 1px solid #444;
       text-align: left;
-      font-size: 0.95rem;
+      font-size: 14px;
     }
-    table tbody tr:hover {
-      background: #2a2a2a;
+    table th {
+      background: #111;
+      color: #08f;
     }
     .action-btn {
-      background: #f8b500;
+      background: #08f;
+      color: #111;
       border: none;
       padding: 6px 12px;
       margin-right: 6px;
       border-radius: 6px;
-      font-weight: 700;
+      font-size: 13px;
       cursor: pointer;
-      color: #121212;
-      font-size: 0.9rem;
-      transition: background-color 0.3s ease;
     }
     .action-btn.delete {
-      background: #e53935;
+      background: #f33;
       color: #fff;
     }
-    .action-btn:hover {
-      background: #c69000;
-    }
-    .action-btn.delete:hover {
-      background: #b32a24;
-    }
-    /* Responsive */
+    .action-btn:hover { opacity: 0.8; }
+
     @media (max-width: 600px) {
-      table, thead, tbody, th, td, tr {
-        display: block;
+      table, thead, tbody, th, td, tr { display: block; }
+      table thead { display: none; }
+      tr { margin-bottom: 15px; }
+      td { padding-left: 50%; position: relative; }
+      td::before {
+        position: absolute; left: 10px; top: 10px;
+        color: #08f; font-weight: bold;
       }
-      table thead {
-        display: none;
-      }
-      table tbody tr {
-        margin-bottom: 15px;
-        background: #222;
-        border-radius: 8px;
-        padding: 15px;
-      }
-      table tbody tr td {
-        padding-left: 50%;
-        position: relative;
-      }
-      table tbody tr td::before {
-        position: absolute;
-        left: 15px;
-        top: 10px;
-        font-weight: 700;
-        color: #f8b500;
-        white-space: nowrap;
-      }
-      table tbody tr td:nth-of-type(1)::before { content: "Match"; }
-      table tbody tr td:nth-of-type(2)::before { content: "Team 1"; }
-      table tbody tr td:nth-of-type(3)::before { content: "Team 2"; }
-      table tbody tr td:nth-of-type(4)::before { content: "Match Time"; }
-      table tbody tr td:nth-of-type(5)::before { content: "Actions"; padding-left: 0;}
+      td:nth-of-type(1)::before { content: "Match"; }
+      td:nth-of-type(2)::before { content: "Time"; }
+      td:nth-of-type(3)::before { content: "Server 1"; }
+      td:nth-of-type(4)::before { content: "Server 2"; }
+      td:nth-of-type(5)::before { content: "Server 3"; }
+      td:nth-of-type(6)::before { content: "Actions"; padding-left: 0; }
     }
   </style>
 </head>
 <body>
 
-  <h1>Admin Panel By BDStreamHub</h1>
+  <header>BDStreamHub Admin</header>
 
-  <div id="loginSection">
-    <input type="password" id="passwordInput" placeholder="পাসওয়ার্ড দিন" />
-    <button onclick="login()">লগইন</button>
-    <p id="loginMsg" style="color:#e53935; margin-top:10px;"></p>
+  <!-- Login Section -->
+  <div id="login-section">
+    <input type="password" id="admin-password" placeholder="Enter Admin Password"/>
+    <button onclick="doLogin()">Login</button>
+    <div id="login-msg"></div>
   </div>
 
-  <div id="adminSection" style="display:none;">
-    <form id="matchForm">
-      <input name="Match" placeholder="Match Name" required />
-      <input name="Team1" placeholder="Team 1 Name" required />
-      <input name="Team2" placeholder="Team 2 Name" required />
-      <input name="Team1Logo" placeholder="Team 1 Logo URL" required />
-      <input name="Team2Logo" placeholder="Team 2 Logo URL" required />
-      <input name="MatchTime" type="datetime-local" placeholder="MatchTime (বাংলাদেশ সময়)" required />
-      <input name="Server1" placeholder="Stream URL 1" required />
-      <input name="Server2" placeholder="Stream URL 2" />
-      <input name="Server3" placeholder="Stream URL 3" />
-      <textarea name="Notice" placeholder="Notice (optional)"></textarea>
-      <button type="submit">Add Match</button>
+  <!-- Admin Panel -->
+  <div id="admin-section" style="display:none;">
+    <form id="match-form" onsubmit="saveMatch(event)">
+      <label>Match Title</label>
+      <input name="matchTitle" required/>
+
+      <label>Team 1 Name</label>
+      <input name="team1" required/>
+
+      <label>Team 2 Name</label>
+      <input name="team2" required/>
+
+      <label>Team 1 Logo URL</label>
+      <input name="team1Logo" required/>
+
+      <label>Team 2 Logo URL</label>
+      <input name="team2Logo" required/>
+
+      <label>Match Date &amp; Time (BD Time, ISO w/ +06:00)</label>
+      <input name="matchTime" type="datetime-local" step="1" required/>
+
+      <label>Server 1 URL</label>
+      <input name="server1" required/>
+
+      <label>Server 2 URL (optional)</label>
+      <input name="server2"/>
+
+      <label>Server 3 URL (optional)</label>
+      <input name="server3"/>
+
+      <label>Notice (optional)</label>
+      <textarea name="notice" rows="2"></textarea>
+
+      <button type="submit">Save Match</button>
     </form>
 
-    <table id="matchTable">
+    <table id="history-table">
       <thead>
         <tr>
           <th>Match</th>
-          <th>Team 1</th>
-          <th>Team 2</th>
-          <th>Match Time (Bangladesh Time)</th>
+          <th>Time (BD)</th>
+          <th>Srv1</th>
+          <th>Srv2</th>
+          <th>Srv3</th>
           <th>Actions</th>
         </tr>
       </thead>
@@ -194,209 +190,97 @@
     </table>
   </div>
 
-<script>
-  // ======================
-  // CONFIGURATION
-  // ======================
-  const CORRECT_PASSWORD = "bdstreamhub123"; // এখানে তোমার পাসওয়ার্ড রাখো
-  const apiUrl = "https://script.google.com/macros/s/AKfycbyb-bETu6BMtHVr9f1ti5rYUFQqF51-vLjZ3ZJnRTFBODac_u7R0Q_rCvmZqljOJgR2jQ/exec";
+  <script>
+    const API_URL = "YOUR_WEB_APP_URL?action=";
+    const ADMIN_PASSWORD = "admin123"; // change this!
 
-  // ======================
-  // STATE
-  // ======================
-  let matches = JSON.parse(localStorage.getItem('bdstreamhub_matches')) || [];
-
-  // ======================
-  // LOGIN
-  // ======================
-  function login() {
-    const pass = document.getElementById('passwordInput').value.trim();
-    const msg = document.getElementById('loginMsg');
-    if (pass === CORRECT_PASSWORD) {
-      document.getElementById('loginSection').style.display = 'none';
-      document.getElementById('adminSection').style.display = 'block';
-      msg.textContent = '';
-      renderMatches();
-    } else {
-      msg.textContent = 'পাসওয়ার্ড ভুল হয়েছে!';
-    }
-  }
-
-  // ======================
-  // FORM SUBMIT - ADD OR UPDATE
-  // ======================
-  document.getElementById('matchForm').onsubmit = e => {
-    e.preventDefault();
-
-    // Collect form data
-    const formData = new FormData(e.target);
-    const matchObj = Object.fromEntries(formData.entries());
-
-    // Validate datetime-local input is ISO without offset (YYYY-MM-DDTHH:mm)
-    if (!matchObj.MatchTime) {
-      alert("সঠিক সময় দিন");
-      return;
+    function doLogin() {
+      const pwd = document.getElementById('admin-password').value;
+      if (pwd === ADMIN_PASSWORD) {
+        document.getElementById('login-section').style.display = 'none';
+        document.getElementById('admin-section').style.display = 'block';
+        loadMatches();
+      } else {
+        document.getElementById('login-msg').innerText = 'Wrong password!';
+      }
     }
 
-    // Convert datetime-local (browser local time) to Bangladesh time ISO with offset +06:00
-    // We want to save match time in ISO format with +06:00 offset
-    let localDate = new Date(matchObj.MatchTime);
-    // Calculate Bangladesh offset (+6 hours)
-    let bangladeshOffset = 6 * 60; // minutes
-    let localOffset = localDate.getTimezoneOffset(); // minutes
-    let diffInMin = bangladeshOffset + localOffset;
-    let bangladeshDate = new Date(localDate.getTime() + diffInMin * 60000);
-
-    matchObj.MatchTime = bangladeshDate.toISOString().replace('Z', '+06:00');
-
-    // Add an id if new match
-    if (!matchObj.id) {
-      matchObj.id = Date.now();
-      matches.push(matchObj);
-    } else {
-      // Edit existing match
-      let index = matches.findIndex(m => m.id == matchObj.id);
-      if (index !== -1) matches[index] = matchObj;
+    // Fetch and display existing matches
+    async function loadMatches() {
+      const res = await fetch(API_URL + 'get');
+      const data = await res.json();
+      const tbody = document.querySelector('#history-table tbody');
+      tbody.innerHTML = '';
+      data.matches.forEach(m => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+          <td>${m.matchTitle}</td>
+          <td>${new Date(m.matchTime).toLocaleString('en-GB', { timeZone: 'Asia/Dhaka', hour12: true })}</td>
+          <td><a href="${m.server1}" target="_blank">Link</a></td>
+          <td>${m.server2? `<a href="${m.server2}" target="_blank">Link</a>` : ''}</td>
+          <td>${m.server3? `<a href="${m.server3}" target="_blank">Link</a>` : ''}</td>
+          <td class="actions">
+            <button class="action-btn" onclick="editMatch('${m.matchTitle}')">Edit</button>
+            <button class="action-btn delete" onclick="deleteMatch('${m.matchTitle}')">Delete</button>
+          </td>`;
+        tbody.appendChild(row);
+      });
     }
 
-    // Save to localStorage
-    localStorage.setItem('bdstreamhub_matches', JSON.stringify(matches));
+    // Save new or edited match
+    async function saveMatch(e) {
+      e.preventDefault();
+      const form = e.target;
+      const data = {};
+      new FormData(form).forEach((v,k) => data[k] = v);
 
-    // Push to Google Script API only if adding new match
-    if (!matchObj.id) {
-      fetch(apiUrl, {
-        method: 'POST',
-        body: JSON.stringify(matchObj),
-        headers: {
-          'Content-Type': 'application/json'
-        }
-      }).then(r => r.text())
-      .then(() => alert('Added to server!'))
-      .catch(() => alert('Server push failed'));
+      // Convert datetime-local (browser) to ISO+06:00
+      const dt = new Date(data.matchTime);
+      const offset = dt.getTimezoneOffset(); // in mins
+      const bdOffset = -360; // +6h => -360min
+      const bdTime = new Date(dt.getTime() + (offset - bdOffset) * 60000);
+      data.matchTime = bdTime.toISOString().replace('Z','+06:00');
+
+      // Determine action
+      const action = form.dataset.editing ? 'edit' : 'add';
+      data.password = ADMIN_PASSWORD;
+
+      const res = await fetch(API_URL + action + '&password=' + ADMIN_PASSWORD + '&matchTitle=' + encodeURIComponent(data.matchTitle), {
+        method:'POST',
+        body: JSON.stringify(data)
+      });
+      const txt = await res.text(); alert(txt);
+      form.reset(); delete form.dataset.editing;
+      loadMatches();
     }
 
-    e.target.reset();
-    renderMatches();
-  };
-
-  // ======================
-  // RENDER MATCHES TABLE
-  // ======================
-  function renderMatches() {
-    const tbody = document.querySelector('#matchTable tbody');
-    tbody.innerHTML = '';
-
-    matches.forEach(match => {
-      let tr = document.createElement('tr');
-
-      // Match name
-      let tdMatch = document.createElement('td');
-      tdMatch.textContent = match.Match;
-      tr.appendChild(tdMatch);
-
-      // Team 1
-      let tdTeam1 = document.createElement('td');
-      tdTeam1.innerHTML = `<img src="${match.Team1Logo}" alt="Team1" style="height:24px;vertical-align:middle;margin-right:6px;border-radius:3px;"> ${match.Team1}`;
-      tr.appendChild(tdTeam1);
-
-      // Team 2
-      let tdTeam2 = document.createElement('td');
-      tdTeam2.innerHTML = `<img src="${match.Team2Logo}" alt="Team2" style="height:24px;vertical-align:middle;margin-right:6px;border-radius:3px;"> ${match.Team2}`;
-      tr.appendChild(tdTeam2);
-
-      // Match time in Bangladesh time AM/PM format (ISO formatted with +06:00)
-      let tdTime = document.createElement('td');
-      tdTime.textContent = formatBangladeshTime(match.MatchTime);
-      tr.appendChild(tdTime);
-
-      // Actions: Edit and Delete
-      let tdActions = document.createElement('td');
-
-      let editBtn = document.createElement('button');
-      editBtn.textContent = 'Edit';
-      editBtn.className = 'action-btn';
-      editBtn.onclick = () => editMatch(match.id);
-      tdActions.appendChild(editBtn);
-
-      let deleteBtn = document.createElement('button');
-      deleteBtn.textContent = 'Delete';
-      deleteBtn.className = 'action-btn delete';
-      deleteBtn.onclick = () => deleteMatch(match.id);
-      tdActions.appendChild(deleteBtn);
-
-      tr.appendChild(tdActions);
-
-      tbody.appendChild(tr);
-    });
-  }
-
-  // ======================
-  // FORMAT BANGLADESH TIME AM/PM
-  // ======================
-  function formatBangladeshTime(isoString) {
-    if (!isoString) return '';
-    let date = new Date(isoString);
-    let options = {
-      year: 'numeric', month: '2-digit', day: '2-digit',
-      hour: '2-digit', minute: '2-digit',
-      hour12: true,
-      timeZone: 'Asia/Dhaka'
-    };
-    return date.toLocaleString('bn-BD', options);
-  }
-
-  // ======================
-  // EDIT MATCH
-  // ======================
-  function editMatch(id) {
-    let match = matches.find(m => m.id == id);
-    if (!match) return alert("ম্যাচ পাওয়া যায়নি!");
-
-    // Fill form with match data
-    let form = document.getElementById('matchForm');
-    form.Match.value = match.Match;
-    form.Team1.value = match.Team1;
-    form.Team2.value = match.Team2;
-    form.Team1Logo.value = match.Team1Logo;
-    form.Team2Logo.value = match.Team2Logo;
-
-    // Convert ISO with offset +06:00 to datetime-local format (local browser time)
-    let dt = new Date(match.MatchTime);
-    let tzOffsetMinutes = dt.getTimezoneOffset();
-    let bangladeshOffsetMinutes = -360; // UTC+6 = -360 minutes offset from UTC
-    let localDate = new Date(dt.getTime() + (tzOffsetMinutes - bangladeshOffsetMinutes) * 60000);
-
-    // Format to YYYY-MM-DDTHH:mm (datetime-local accepts this format)
-    form.MatchTime.value = localDate.toISOString().slice(0,16);
-
-    form.Server1.value = match.Server1;
-    form.Server2.value = match.Server2 || '';
-    form.Server3.value = match.Server3 || '';
-    form.Notice.value = match.Notice || '';
-
-    // Set hidden id field (create if doesn't exist)
-    let idInput = form.querySelector('input[name="id"]');
-    if (!idInput) {
-      idInput = document.createElement('input');
-      idInput.type = 'hidden';
-      idInput.name = 'id';
-      form.appendChild(idInput);
+    // Populate form for editing
+    function editMatch(title) {
+      const row = [...document.querySelectorAll('#history-table tbody tr')]
+        .find(r => r.children[0].innerText === title);
+      if (!row) return;
+      const cols = row.children;
+      const form = document.getElementById('match-form');
+      form.matchTitle.value = cols[0].innerText;
+      // parse BD time back to local datetime-local
+      const iso = new Date(cols[1].innerText).toISOString().slice(0,16);
+      form.matchTime.value = iso;
+      // fetch servers from links
+      form.server1.value = cols[2].querySelector('a').href;
+      form.server2.value = cols[3].querySelector('a')?.href || '';
+      form.server3.value = cols[4].querySelector('a')?.href || '';
+      form.notice.value = ''; // personal notice row
+      form.dataset.editing = 'true';
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     }
-    idInput.value = id;
 
-    window.scrollTo({top:0, behavior:'smooth'});
-  }
-
-  // ======================
-  // DELETE MATCH
-  // ======================
-  function deleteMatch(id) {
-    if (!confirm("আপনি কি এই ম্যাচটি মুছে ফেলতে চান?")) return;
-    matches = matches.filter(m => m.id != id);
-    localStorage.setItem('bdstreamhub_matches', JSON.stringify(matches));
-    renderMatches();
-  }
-</script>
-
+    // Delete match
+    async function deleteMatch(title) {
+      if (!confirm('Delete '+title+'?')) return;
+      const res = await fetch(API_URL + 'delete&password=' + ADMIN_PASSWORD + '&matchTitle=' + encodeURIComponent(title));
+      alert(await res.text());
+      loadMatches();
+    }
+  </script>
 </body>
 </html>
