--- a/admin.html
+++ b/admin.html
@@ -191,7 +191,7 @@
   </div>
 
   <script>
-    const API_URL = "YOUR_WEB_APP_URL?action=";
+    const API_URL = "https://script.google.com/macros/s/AKfycbwxRYG33l5iXVvbGysPFixZThWftJ566wI5ko0cV5r7yOPSXr1D7Z_4qkLrYg-9U--4rg/exec?action=";
     const ADMIN_PASSWORD = "admin123"; // change this!
 
     function doLogin() {
